fixing some off-center issues.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,7 @@ img {
     flex-direction: row;
   }
 
-  div.sponsors * {
+  div.sponsors > * {
     margin: 0 auto;
     padding: 0 1rem;
     max-width: 75%;
@@ -69,7 +69,7 @@ img {
     flex-direction: column;
   }
 
-  .sponsors * {
+  .sponsors > * {
     margin: 0.5rem auto;
     width: 100%;
   }
@@ -183,12 +183,17 @@ h1, h2, h3 {
   text-align: center;
 }
 
+.giveaway * {
+  display: block;
+}
+
 .giveaway img {
   margin: 0.5rem auto;
 }
 
 .giveaway a {
   margin-left: 0;
+  text-align: center;
 }
 
 img.sponsor-logo {
